more small spacing/coloring fixes

--- a/style.css
+++ b/style.css
@@ -9,6 +9,16 @@ h1 {
 	margin: 0;
 }
 
+a {
+    color: #53a7bd;
+}
+
+/*list presentation has a ton of extra whitespace*/
+li {
+    margin-top: -18px;
+    margin-bottom: -32px;
+}
+
 
 input {
     border: none;
